Mark flat_tree's move constructor as noexcept.

Bug: 830117
Change-Id: Icd3cc6959a256a1cc1691c51fdc95f1964af9fb9
Reviewed-on: https://chromium-review.googlesource.com/1010025
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552594}
Former-commit-id: aa8021c3ea0a183348e70f6d164c87f70054ee69