base/containers/flat_tree.h
@@ -141,7 +141,7 @@ class flat_tree {
             const key_compare& comp = key_compare());
 
   flat_tree(const flat_tree&);
-  flat_tree(flat_tree&&);
+  flat_tree(flat_tree&&) noexcept = default;
 
   flat_tree(std::vector<value_type> items,
             FlatContainerDupes dupe_handling = KEEP_FIRST_OF_DUPES,
@@ -302,7 +302,7 @@ class flat_tree {
   // and lexicograhpical_compare(). If the underlying container type is changed,
   // this code may need to be modified.
 
-  void swap(flat_tree& other);
+  void swap(flat_tree& other) noexcept;
 
   friend bool operator==(const flat_tree& lhs, const flat_tree& rhs) {
     return lhs.impl_.body_ == rhs.impl_.body_;
@@ -328,7 +328,7 @@ class flat_tree {
     return !(lhs > rhs);
   }
 
-  friend void swap(flat_tree& lhs, flat_tree& rhs) { lhs.swap(rhs); }
+  friend void swap(flat_tree& lhs, flat_tree& rhs) noexcept { lhs.swap(rhs); }
 
  protected:
   // Emplaces a new item into the tree that is known not to be in it. This
@@ -519,10 +519,6 @@ flat_tree<Key, Value, GetKeyFromValue, KeyCompare>::flat_tree(
 template <class Key, class Value, class GetKeyFromValue, class KeyCompare>
 flat_tree<Key, Value, GetKeyFromValue, KeyCompare>::flat_tree(
     const flat_tree&) = default;
-
-template <class Key, class Value, class GetKeyFromValue, class KeyCompare>
-flat_tree<Key, Value, GetKeyFromValue, KeyCompare>::flat_tree(flat_tree&&) =
-    default;
 
 template <class Key, class Value, class GetKeyFromValue, class KeyCompare>
 flat_tree<Key, Value, GetKeyFromValue, KeyCompare>::flat_tree(
@@ -935,7 +931,7 @@ auto flat_tree<Key, Value, GetKeyFromValue, KeyCompare>::upper_bound(
 
 template <class Key, class Value, class GetKeyFromValue, class KeyCompare>
 void flat_tree<Key, Value, GetKeyFromValue, KeyCompare>::swap(
-    flat_tree& other) {
+    flat_tree& other) noexcept {
   std::swap(impl_, other.impl_);
 }
 
